GNOME Bugzilla – Bug 706160
query: crash when parsing uri redirection
Last modified: 2013-08-19 08:11:56 UTC
Created attachment 251931 [details] [review] fix uri redirection parsing hlsdemux now crashes because the code to parse uri redirections in URI queries is wrong. When no uri redirection is set on the query, it should set the result to NULL.
commit 9819e48b92b6667f8ea6f0b62f7b8da7b77309da Author: Arnaud Vrac <avrac@freebox.fr> Date: Fri Aug 16 20:36:53 2013 +0200 query: return NULL when parsing uri redirection that was not set https://bugzilla.gnome.org/show_bug.cgi?id=706160