query: return NULL when parsing uri redirection that was not set

https://bugzilla.gnome.org/show_bug.cgi?id=706160